--- a/view/pronunce.html
+++ b/view/pronunce.html
@@ -29,7 +29,7 @@
     <main>
         <header>
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Portfolio</a>
+                <a class="navbar-brand" href="../index.html">Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
                     aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
