--- a/view/contact.html
+++ b/view/contact.html
@@ -47,6 +47,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./pronunce.html">Pronunce</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./news.html">News</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -55,7 +58,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm"></div>
-                    <section class="col-xs col-sm col-md col-lg contact-form">
+                    <section class="col-xs col-sm col-md col-lg contact-form m-per-5">
                         <h3>Contact Me</h3>
                         <hr />
 
