--- a/view/pronunce.html
+++ b/view/pronunce.html
@@ -46,6 +46,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Pronunce</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./news.html">News</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -53,7 +56,7 @@
         <article class="container">
             <div class="row">
                 <section class="col-sm"></section>
-                <section class="col-sm contact-form">
+                <section class="col-sm contact-form m-per-5">
                     <h3>Pronunce</h3>
                     <hr />
 
@@ -74,11 +77,7 @@
         </article>
 
     </main>
-    <script>
-        function speak() {
-            speechSynthesis.speak(new SpeechSynthesisUtterance(document.querySelector('#exampleInputDesp').value));
-        }
-    </script>
+    <script src="../js/pronunce.js"></script>
 </body>
 
 </html>
