--- a/view/news.html
+++ b/view/news.html
@@ -46,8 +46,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./pronunce.html">Pronunce</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./vowelFinder.html">Vowel Finder</a>
+                        </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../test/quit.html">QUnit</a>
                         </li>
                     </ul>
                 </div>
