--- a/view/pronunce.html
+++ b/view/pronunce.html
@@ -47,7 +47,13 @@
                             <a class="nav-link" href="#">Pronunce</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="./vowelFinder.html">Vowel Finder</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./news.html">News</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../test/quit.html">QUnit</a>
                         </li>
                     </ul>
                 </div>
