--- a/view/vowelFinder.html
+++ b/view/vowelFinder.html
@@ -27,7 +27,6 @@
 <body>
 
     <main>
-
         <header>
             <nav class="navbar navbar-expand-md navbar-dark bg-dark">
                 <a class="navbar-brand" href="../index.html">Portfolio</a>
@@ -41,13 +40,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">About Me <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Contact</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pronunce.html">Pronunce</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="./vowelFinder.html">Vowel Finder</a>
                         </li>
                         <li class="nav-item">
@@ -60,46 +59,35 @@
                 </div>
             </nav>
         </header>
-        <article>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm"></div>
-                    <section class="col-xs col-sm col-md col-lg contact-form m-per-5">
-                        <h3>Contact Me</h3>
-                        <hr />
+        <article class="container">
+            <div class="row">
+                <section class="col-sm"></section>
+                <section class="col-sm contact-form m-per-5">
+                    <h3>Vowel Count</h3>
+                    <hr />
 
-                        <form>
-                            <div class="form-group">
-                                <label for="exampleInputFirstName">First Name</label>
-                                <input type="text" class="form-control" id="exampleInputFirstName"
-                                    placeholder="Enter your first name" required>
+                    <form>
+                        <div class="form-group">
+                            <label for="vouInput">Enter Text: </label>
+                            <input class="form-control" id="vouInput"
+                                placeholder="Enter text here to find vowel count..." required>
+                            <div class="m-t-8">
+                                <div>Vowel Count: <strong id="vowelCount"></strong></div>
+                                <div>Consonant Count: <strong id="consCount"></strong></div>
                             </div>
-
-                            <div class="form-group">
-                                <label for="exampleInputLastName">Last Name</label>
-                                <input type="text" class="form-control" id="exampleInputLastName"
-                                    placeholder="Enter your last name" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email" required>
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
-                                    anyone
-                                    else.</small>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </form>
-                    </section>
-                    <div class="col-sm"></div>
-                </div>
+                        </div>
+                        <button class="btn btn-primary" id="submit">Submit</button>
+                    </form>
+                </section>
+                <section class="col-sm"></section>
             </div>
             <footer class="footer-fix">
                 &copy;&nbsp;2019 received @Anil Bomma
             </footer>
         </article>
+
     </main>
+    <script src="../js/vowelCount.js"></script>
 </body>
 
 </html>
